--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/thebigdeal916/next-site#readme",
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.5.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.13.1",
+    "react-responsive-carousel": "^3.2.9"
   }
 }
