--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "isomorphic-unfetch": "^3.0.0",
+    "mongoose": "^5.10.0",
     "next": "^9.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
