--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/thebigdeal916/next-site#readme",
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "mongoose": "^5.10.0",
     "next": "^9.5.1",
