--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/thebigdeal916/next-site#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
